[gd_scene load_steps=9 format=2]

[ext_resource path="res://Fonts/new_dynamicfont.tres" type="DynamicFont" id=1]
[ext_resource path="res://interface/rooms/Camada 866 copiar 7.png" type="Texture" id=2]
[ext_resource path="res://interface/rooms/Agrupar 12 copiar 5.png" type="Texture" id=3]
[ext_resource path="res://interface/rooms/Edu_button.png" type="Texture" id=4]
[ext_resource path="res://interface/rooms/Camada 741.png" type="Texture" id=5]
[ext_resource path="res://interface/rooms/Camada 740.png" type="Texture" id=6]
[ext_resource path="res://interface/rooms/SelectRoom.png" type="Texture" id=7]
[ext_resource path="res://interface/profile/JoinButton.gd" type="Script" id=8]

[node name="RoomPrefab" type="TextureRect"]
margin_right = 1080.0
margin_bottom = 260.0
texture = ExtResource( 3 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureSelecBackg" type="TextureRect" parent="."]
visible = false
margin_left = -17.0
margin_top = -15.0
margin_right = 899.0
margin_bottom = 272.0
texture = ExtResource( 7 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 264.0
margin_top = 44.0
margin_right = 888.0
margin_bottom = 230.0
disabled = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 5 )
texture_focused = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AvatarButton" type="TextureButton" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -1.0
margin_right = -815.0
margin_bottom = -1.0
disabled = true
texture_normal = ExtResource( 4 )
expand = true
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameRect" type="TextureRect" parent="."]
margin_left = 268.0
margin_top = 32.0
margin_right = 532.0
margin_bottom = 106.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RoomName" type="Label" parent="NameRect"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -2.0
custom_colors/font_color = Color( 0.352941, 0.34902, 0.34902, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Xaxa"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayersText" type="Label" parent="."]
visible = false
anchor_left = 0.252
anchor_top = 0.375
anchor_right = 0.805
anchor_bottom = 0.814
margin_left = 22.84
margin_top = 0.499992
margin_right = -0.400085
margin_bottom = -6.64
custom_colors/font_color = Color( 0.258824, 0.243137, 0.243137, 1 )
custom_fonts/font = ExtResource( 1 )
text = "X, Y, Z"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton2" type="TextureButton" parent="."]
margin_right = 883.0
margin_bottom = 248.0
toggle_mode = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="AvatarButton" to="." method="_on_AvatarButton_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_TextureButton2_pressed"]
[connection signal="toggled" from="TextureButton2" to="." method="_on_TextureButton2_toggled"]
